# Sudoku8088

./: README.md
learn_build_resume-project-05-Summary/: .gitignore  README-ORIGINAL.md  README-cn.md  README.md  pyproject.toml
learn_build_resume-project-05-Summary/.claude/: TEACHING.md  settings.json
learn_build_resume-project-05-Summary/docs/tutorials/: Syllabus.md
learn_systematic_job_search-project-01-Search-Job-Find-Contact-Send-Message/: .gitignore  README-ORIGINAL.md  README.md  TICKET.md  generate_prompt.py  mise.toml  prompt_generator.py  pyproject.toml
learn_systematic_job_search-project-01-Search-Job-Find-Contact-Send-Message/.claude/: settings.json
learn_systematic_job_search-project-01-Search-Job-Find-Contact-Send-Message/docs/: contacts.md  linkedin-cold-message-prompt.md  linkedin-cold-message-prompt.template.md  linkedin-contact-finder-prompt.md  linkedin-contact-finder-prompt.template.md  linkedin-job-description.md  linkedin-job-search-prompt.md  linkedin-job-search-prompt.template.md  linkedin-job-search-results.tsv
learn_systematic_job_search-project-01-Search-Job-Find-Contact-Send-Message/docs/tutorials/: Syllabus.md
learn_systematic_job_search-project-01-Search-Job-Find-Contact-Send-Message/docs/tutorials/01-Search-Job-Find-Contact-Send-Message/: README-cn.md
learn_systematic_job_search-project-01-Search-Job-Find-Contact-Send-Message/profile/: code-message-out-reach-key.md  code-message-outcome.md  code-message-target-person.md  code-message.md  job-description.md  objective.md  resume.md
(+17 files in other folders)
